Update typo and assets

--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
 </head>
 
 <body>
-  <h1>Hello There</h1>
-  <p>This web page is under construction.</p>
-  <p>If you are curious, feel free to <a href="/playground">visit my playground here</a>.</p>
+  <header>
+    <div class="stacked-content height-100dvh">
+      <img class="img-object-fit-cover height-100dvh" src="/assets/images/bg-flower-light-1.jpg" alt="Hung Nguyen">
+      <div>
+        <h1>Hello There</h1>
+        <p>This web page is under construction.</p>
+        <p>If you are curious, feel free to <a href="/playground">visit my playground</a>.</p>
+      </div>
+    </div>
+  </header>
+
   <script src="/script.js"></script>
 </body>
 
