--- a/playground.html
+++ b/playground.html
@@ -15,7 +15,8 @@
 
 <body>
   <div class="stacking-header">
-    <img class="stacking-header-image" src="/assets/images/hungmqn.png" alt="Hung" width="100%" height="500px">
+    <img class="stacking-header-image img-object-fit" src="/assets/images/bg-mushroom-render-1.jpg" alt="Hung"
+      width="100%" height="500px">
     <h1 class="stacking-header-title">Hello, I'm under the water, please help me! Ohohohohoh...!</h1>
   </div>
   <div class="short-page-footer-layout">
