Update home page

--- a/index.html
+++ b/index.html
@@ -15,16 +15,29 @@
 
 <body>
   <header>
-    <div class="stacked-content height-100dvh">
-      <img class="img-object-fit-cover height-100dvh" src="/assets/images/bg-flower-light-1.jpg" alt="Hung Nguyen">
-      <div>
-        <h1>Hello There</h1>
-        <p>This web page is under construction.</p>
-        <p>If you are curious, feel free to <a href="/playground">visit my playground</a>.</p>
-      </div>
-    </div>
+    <nav class="navbar">
+      <ul>
+        <li>My name is Hung</li>
+        <li>Software Engineer</li>
+        <li>
+          <h5>This website is inspired by <a href="https://camillemormal.com/" rel="noopener noreferrer "
+              target="_blank">camillemormal.com</a></h5>
+        </li>
+      </ul>
+    </nav>
   </header>
-
+  <main>
+    <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
+      <img class="image arrow" src="/assets/images/left-arrow.png" alt="image" draggable="false">
+      <img class="image" src="/assets/images/bg-cn-1.jpg" alt="image" draggable="false">
+      <img class="image" src="/assets/images/bg-cn-2.jpg" alt="image" draggable="false">
+      <img class="image" src="/assets/images/bg-cn-3.jpg" alt="image" draggable="false">
+      <img class="image" src="/assets/images/bg-cn-4.jpg" alt="image" draggable="false">
+      <img class="image" src="/assets/images/bg-cn-5.jpg" alt="image" draggable="false">
+      <img class="image" src="/assets/images/bg-cn-6.jpg" alt="image" draggable="false">
+      <img class="image" src="/assets/images/bg-cn-7.jpg" alt="image" draggable="false">
+    </div>
+  </main>
   <script src="/script.js"></script>
 </body>
 
