--- a/backup/index.html
+++ b/backup/index.html
@@ -11,33 +11,355 @@
   <link rel="manifest" href="/manifest.json" />
   <title>Hung Nguyen</title>
   <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/assets/icons/icomoon/style.css">
 </head>
 
 <body>
   <header>
     <nav class="navbar">
-      <ul>
-        <li>My name is Hung</li>
-        <li>Software Engineer</li>
-        <li>
-          <h5>This website is inspired by <a href="https://camillemormal.com/" rel="noopener noreferrer "
-              target="_blank">camillemormal.com</a></h5>
-        </li>
-      </ul>
+      <div class="navbar-content">
+        <ul>
+          <li><img src="/android-chrome-192x192.png" alt="" width="100%" height="32"></li>
+          <li>Software Engineer</li>
+          <li><a href="https://hungmqn.com/">About Me</a></li>
+          <li><span class="icon-moon-fill"></span></li>
+        </ul>
+      </div>
     </nav>
   </header>
   <main>
-    <div id="image-track" data-mouse-down-at="0" data-prev-percentage="0">
-      <img class="image arrow" src="/assets/images/left-arrow.png" alt="image" draggable="false">
-      <img class="image" src="/assets/images/bg-cn-1.jpg" alt="image" draggable="false">
-      <img class="image" src="/assets/images/bg-cn-2.jpg" alt="image" draggable="false">
-      <img class="image" src="/assets/images/bg-cn-3.jpg" alt="image" draggable="false">
-      <img class="image" src="/assets/images/bg-cn-4.jpg" alt="image" draggable="false">
-      <img class="image" src="/assets/images/bg-cn-5.jpg" alt="image" draggable="false">
-      <img class="image" src="/assets/images/bg-cn-6.jpg" alt="image" draggable="false">
-      <img class="image" src="/assets/images/bg-cn-7.jpg" alt="image" draggable="false">
-    </div>
+    <section>
+      <div class="welcome">
+        <div class="container">
+          <p class="text-align-center">Hi there, my name is Hung. Nice to have you here.</p>
+        </div>
+      </div>
+      <div class="hero">
+        <img src="/assets/images/hero-1.webp" class="hero-img" alt="">
+      </div>
+    </section>
+
+    <div class="container">
+      <div class="clearfix mhl ptl">
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-chat-alt-fill"></span>
+            <span class="mls"> icon-chat-alt-fill</span>
+          </div>
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-x"></span>
+            <span class="mls"> icon-x</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-share"></span>
+            <span class="mls"> icon-share</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-mail"></span>
+            <span class="mls"> icon-mail</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-plus"></span>
+            <span class="mls"> icon-plus</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-minus"></span>
+            <span class="mls"> icon-minus</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-equalizer"></span>
+            <span class="mls"> icon-equalizer</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-magnifying-glass"></span>
+            <span class="mls"> icon-magnifying-glass</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-spin-alt"></span>
+            <span class="mls"> icon-spin-alt</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-reload"></span>
+            <span class="mls"> icon-reload</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-arrow-left"></span>
+            <span class="mls"> icon-arrow-left</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-arrow-right"></span>
+            <span class="mls"> icon-arrow-right</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-arrow-up"></span>
+            <span class="mls"> icon-arrow-up</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-arrow-down"></span>
+            <span class="mls"> icon-arrow-down</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-iphone"></span>
+            <span class="mls"> icon-iphone</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-pen-alt2"></span>
+            <span class="mls"> icon-pen-alt2</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-brush"></span>
+            <span class="mls"> icon-brush</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-camera"></span>
+            <span class="mls"> icon-camera</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-aperture"></span>
+            <span class="mls"> icon-aperture</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-bars"></span>
+            <span class="mls"> icon-bars</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-eye"></span>
+            <span class="mls"> icon-eye</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-user"></span>
+            <span class="mls"> icon-user</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-clock"></span>
+            <span class="mls"> icon-clock</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-moon-fill"></span>
+            <span class="mls"> icon-moon-fill</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-map-pin-fill"></span>
+            <span class="mls"> icon-map-pin-fill</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-download"></span>
+            <span class="mls"> icon-download</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-upload"></span>
+            <span class="mls"> icon-upload</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-paperclip"></span>
+            <span class="mls"> icon-paperclip</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-menu"></span>
+            <span class="mls"> icon-menu</span>
+          </div>
+
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-youtube"></span>
+            <span class="mls"> icon-youtube</span>
+          </div>
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-twitch"></span>
+            <span class="mls"> icon-twitch</span>
+          </div>
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-github"></span>
+            <span class="mls"> icon-github</span>
+          </div>
+        </div>
+        <div class="glyph fs1">
+          <div class="clearfix bshadow0 pbs">
+            <span class="icon-linkedin2"></span>
+            <span class="mls"> icon-linkedin2</span>
+          </div>
+        </div>
+      </div>
+
+
+
+      <div class="text-align-right container">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce finibus, turpis sed vestibulum varius, elit
+        ligula
+        dapibus nisl, id blandit ligula ante egestas tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Curabitur sed nibh et velit laoreet consectetur. Phasellus mi lacus, ornare ac egestas faucibus, faucibus at
+        neque. Nam dui nulla, tempor vel placerat quis, imperdiet eu purus. Ut at dolor libero. Proin ac ornare purus, a
+        commodo turpis. Duis consectetur, turpis a semper ultrices, risus ligula maximus lectus, id dapibus libero
+        tellus
+        non neque. Nullam aliquet efficitur massa, eu lacinia libero pulvinar id. Sed congue augue et mauris dictum,
+        vitae
+        ultricies urna fermentum. Ut mattis maximus sem, nec varius ligula venenatis ac. Donec et rhoncus erat.
+
+        Maecenas mi nulla, gravida et augue euismod, sagittis scelerisque tortor. In dictum cursus molestie. Integer non
+        arcu ac mi suscipit pellentesque vel sit amet massa. Vestibulum ante ipsum primis in faucibus orci luctus et
+        ultrices posuere cubilia curae; Sed at aliquam mauris. Mauris dictum lectus tortor. Nam efficitur, velit eget
+        tempus aliquet, dolor lorem pharetra magna, a egestas dui tortor vel velit. Duis congue aliquet tortor, in
+        eleifend massa maximus vel. In sed ornare neque, vel placerat lectus. Mauris eu felis ut nulla egestas viverra.
+        Vivamus iaculis pulvinar mi quis sollicitudin. Sed nisl massa, malesuada a efficitur vitae, tincidunt sed sem.
+
+        Phasellus id efficitur lectus, tempus interdum mauris. Integer eu purus tristique, hendrerit sapien ut, bibendum
+        urna. Praesent a sodales lectus. Aliquam et nisl ac libero sodales molestie sed id erat. Ut at massa nibh.
+        Aliquam
+        volutpat efficitur iaculis. Nulla tristique turpis eget lacinia rutrum. Mauris mattis massa quis leo dignissim,
+        eget porta velit pretium. Nullam tempus turpis vitae sapien bibendum venenatis ut a quam. In eget ipsum
+        tincidunt,
+        maximus massa molestie, porttitor felis. Vestibulum rhoncus dolor ut lacus cursus, sit amet consequat quam
+        lobortis. Sed imperdiet odio nec neque egestas, ut maximus sapien egestas. Lorem ipsum dolor sit amet,
+        consectetur
+        adipiscing elit. Curabitur semper nunc dui, eu faucibus mi tristique a. Pellentesque elementum congue nisi a
+        consectetur.
+
+        Praesent at tincidunt ex, sed consequat dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+        blandit id urna sed pretium. Vivamus vel sagittis risus. Donec sollicitudin posuere eros non consequat. Sed non
+        magna turpis. Aliquam nunc felis, vehicula a cursus eget, elementum sed metus. Donec mattis diam in arcu viverra
+        egestas. Morbi dapibus quam id nunc laoreet vehicula. Sed eget nibh eget magna pellentesque molestie eget nec
+        tellus.
+
+        Vestibulum porttitor lobortis nibh at efficitur. Phasellus velit enim, lacinia et ipsum sit amet, ullamcorper
+        semper leo. In a est justo. Proin congue vel leo in ullamcorper. Maecenas facilisis tortor orci, sit amet
+        elementum felis maximus quis. Vivamus sollicitudin orci non elit rhoncus suscipit. Sed iaculis et lacus ac
+        malesuada.
+      </div>
+      <div class="text-align-right container">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce finibus, turpis sed vestibulum varius, elit
+        ligula
+        dapibus nisl, id blandit ligula ante egestas tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        Curabitur sed nibh et velit laoreet consectetur. Phasellus mi lacus, ornare ac egestas faucibus, faucibus at
+        neque. Nam dui nulla, tempor vel placerat quis, imperdiet eu purus. Ut at dolor libero. Proin ac ornare purus, a
+        commodo turpis. Duis consectetur, turpis a semper ultrices, risus ligula maximus lectus, id dapibus libero
+        tellus
+        non neque. Nullam aliquet efficitur massa, eu lacinia libero pulvinar id. Sed congue augue et mauris dictum,
+        vitae
+        ultricies urna fermentum. Ut mattis maximus sem, nec varius ligula venenatis ac. Donec et rhoncus erat.
+
+        Maecenas mi nulla, gravida et augue euismod, sagittis scelerisque tortor. In dictum cursus molestie. Integer non
+        arcu ac mi suscipit pellentesque vel sit amet massa. Vestibulum ante ipsum primis in faucibus orci luctus et
+        ultrices posuere cubilia curae; Sed at aliquam mauris. Mauris dictum lectus tortor. Nam efficitur, velit eget
+        tempus aliquet, dolor lorem pharetra magna, a egestas dui tortor vel velit. Duis congue aliquet tortor, in
+        eleifend massa maximus vel. In sed ornare neque, vel placerat lectus. Mauris eu felis ut nulla egestas viverra.
+        Vivamus iaculis pulvinar mi quis sollicitudin. Sed nisl massa, malesuada a efficitur vitae, tincidunt sed sem.
+
+        Phasellus id efficitur lectus, tempus interdum mauris. Integer eu purus tristique, hendrerit sapien ut, bibendum
+        urna. Praesent a sodales lectus. Aliquam et nisl ac libero sodales molestie sed id erat. Ut at massa nibh.
+        Aliquam
+        volutpat efficitur iaculis. Nulla tristique turpis eget lacinia rutrum. Mauris mattis massa quis leo dignissim,
+        eget porta velit pretium. Nullam tempus turpis vitae sapien bibendum venenatis ut a quam. In eget ipsum
+        tincidunt,
+        maximus massa molestie, porttitor felis. Vestibulum rhoncus dolor ut lacus cursus, sit amet consequat quam
+        lobortis. Sed imperdiet odio nec neque egestas, ut maximus sapien egestas. Lorem ipsum dolor sit amet,
+        consectetur
+        adipiscing elit. Curabitur semper nunc dui, eu faucibus mi tristique a. Pellentesque elementum congue nisi a
+        consectetur.
+
+        Praesent at tincidunt ex, sed consequat dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+        blandit id urna sed pretium. Vivamus vel sagittis risus. Donec sollicitudin posuere eros non consequat. Sed non
+        magna turpis. Aliquam nunc felis, vehicula a cursus eget, elementum sed metus. Donec mattis diam in arcu viverra
+        egestas. Morbi dapibus quam id nunc laoreet vehicula. Sed eget nibh eget magna pellentesque molestie eget nec
+        tellus.
+
+        Vestibulum porttitor lobortis nibh at efficitur. Phasellus velit enim, lacinia et ipsum sit amet, ullamcorper
+        semper leo. In a est justo. Proin congue vel leo in ullamcorper. Maecenas facilisis tortor orci, sit amet
+        elementum felis maximus quis. Vivamus sollicitudin orci non elit rhoncus suscipit. Sed iaculis et lacus ac
+        malesuada.
+      </div>
+      <!-- <div class="float">
+        <button class="button button-circle shadow-1"><span class="icon-equalizer"></span></button>
+      </div> -->
   </main>
+
   <script src="/script.js"></script>
 </body>
 
