--- a/index.html
+++ b/index.html
@@ -16,25 +16,15 @@
 
 <body>
   <header>
-    <nav class="navbar">
-      <div class="navbar-content">
-        <ul>
-          <li><img src="/android-chrome-192x192.png" alt="" width="100%" height="32"></li>
-          <li>Software Engineer</li>
-          <!-- <li><a href="https://hungmqn.com/">About Me</a></li> -->
-        </ul>
-      </div>
-    </nav>
+    <h1>Hung Nguyen</h1>
+    <h2>Software Engineer</h2>
   </header>
   <main>
     <section>
       <div class="welcome">
         <div class="container">
-          <p class="text-align-center">Hi there, my name is Hung. Nice to have you here.</p>
+          <p class="text-align-center">Hi there, nice to have you here.</p>
         </div>
-      </div>
-      <div class="hero">
-        <img src="/assets/images/hero-1.webp" class="hero-img" alt="">
       </div>
     </section>
 
