Update home page

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 <body>
   <header>
-    <h1>Hung Nguyen</h1>
-    <h2>Software Engineer</h2>
+    <h1 class="font-didone">Hung Nguyen</h1>
+    <h2 class="font-didone">Software Engineer</h2>
   </header>
   <main>
     <section>
