--- a/index.html
+++ b/index.html
@@ -10,28 +10,44 @@
   <link rel="apple-touch-icon" href="/logo192.png" />
   <link rel="manifest" href="/manifest.json" />
   <title>Hung Nguyen</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/theme.css">
   <link rel="stylesheet" href="/assets/icons/icomoon/style.css">
 </head>
 
 <body>
-  <header>
-    <h1>Hung Nguyen</h1>
-    <h2>Software Engineer</h2>
+
+  <header class="container">
+    <h1>Hello</h1>
+    <h2 class="color-secondary">My name is Hung, nice to have you here!</h2>
   </header>
-  <main>
-    <section>
-      <div class="welcome">
-        <div class="container">
-          <p class="text-align-center">Hi there, nice to have you here.</p>
-        </div>
-      </div>
-    </section>
 
+  <main class="container">
+    <p>To contact, please go <a href="#footer">here</a>.</p>
+    <p class="mb-large">This is my playground. I sometimes play with CSS on my spare time.</p>
 
+    <figure class="parallax mb-large">
+      <img class="parallax-background" src="assets/images/landscape.webp" alt="Landscape" />
+      <figcaption class="parallax-foreground">
+        Really want to live at a place like this. Btw, this is to test
+        parallax
+        effect. This should go down.</figcaption>
+      <figcaption class="parallax-foreground parallax-up" style="margin-top: 200px">And this should go up. Seem like I
+        succeed.</figcaption>
+    </figure>
+    <figure class="mb-large">
+      <img src="assets/images/koi.webp" alt="Koi" />
+      <figcaption>I like kois, they are beautiful, aren't they?</figcaption>
+    </figure>
   </main>
 
-  <script src="/script.js"></script>
+  <footer class="container text-center" id="footer">
+    <p class="text-center">hungmqn.com</p>
+    <a href="https://github.com/hungmqn" target="_blank" rel="noopener noreferrer"> <span
+        class="icon-github"></span></a>
+    <a href="https://www.linkedin.com/in/hungmqn" target="_blank" rel="noopener noreferrer"> <span
+        class="icon-linkedin2"></span></a>
+  </footer>
+
 </body>
 
 </html>
