--- a/theme.html
+++ b/theme.html
@@ -3,62 +3,51 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Website</title>
-  <meta name="color-scheme" content="normal">
+  <meta name="description" content="Website of Hung Nguyen, a software engineer." />
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/logo192.png" />
+  <link rel="manifest" href="/manifest.json" />
+  <title>Hung Nguyen</title>
   <link rel="stylesheet" href="/theme.css">
-
+  <link rel="stylesheet" href="/assets/icons/icomoon/style.css">
 </head>
 
 <body>
-  <button id="toggleColorScheme">Toggle</button>
-  <h1>Hello</h1>
 
-  <div>
-    <h2>Heading</h2>
-    <p>Paragraph</p>
-    <a href="#">Link</a>
-    <br />
-    <img src="assets/images/bg-cn-1.jpg" alt="Image" style="width: 300px; height: auto;">
-    <ul>
-      <li>List item 1</li>
-      <li>List item 2</li>
-      <li>List item 3</li>
-    </ul>
-    <table>
-      <tr>
-        <th>Header 1</th>
-        <th>Header 2</th>
-      </tr>
-      <tr>
-        <td>Data 1</td>
-        <td>Data 2</td>
-      </tr>
-    </table>
-  </div>
+  <header class="container">
+    <h1>Hello</h1>
+    <h2 class="color-secondary">My name is Hung, nice to have you here!</h2>
+  </header>
 
-  <form>
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required>
-    <br />
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
-    <br />
-    <button type="submit">Login</button>
-  </form>
-  <script>
-    function toggleTheme() {
-      const theme = document.querySelector('meta[name="color-scheme"]');
-      console.log(theme.content);
-      if (theme.content === 'light') {
-        theme.content = 'dark';
-      } else {
-        theme.content = 'light';
-      }
-    }
+  <main class="container">
+    <p>To contact, please go <a href="#footer">here</a>.</p>
+    <p class="mb-large">This is my playground. I sometimes play with CSS on my spare time.</p>
 
-    document.getElementById('toggleColorScheme').addEventListener('click', toggleTheme);
-  </script>
+    <figure class="parallax mb-large">
+      <img class="parallax-background" src="assets/images/landscape.webp" alt="Landscape" />
+      <figcaption class="parallax-foreground">
+        Really want to live at a place like this. Btw, this is to test
+        parallax
+        effect. This should go down.</figcaption>
+      <figcaption class="parallax-foreground parallax-up" style="margin-top: 200px">And this should go up. Seem like I
+        succeed.</figcaption>
+    </figure>
+    <figure class="mb-large">
+      <img src="assets/images/koi.webp" alt="Koi" />
+      <figcaption>I like kois, they are beautiful, aren't they?</figcaption>
+    </figure>
+  </main>
+
+  <footer class="container text-center" id="footer">
+    <p class="text-center">hungmqn.com</p>
+    <a href="https://github.com/hungmqn" target="_blank" rel="noopener noreferrer"> <span
+        class="icon-github"></span></a>
+    <a href="https://www.linkedin.com/in/hungmqn" target="_blank" rel="noopener noreferrer"> <span
+        class="icon-linkedin2"></span></a>
+  </footer>
+
 </body>
 
 </html>
