--- a/index.html
+++ b/index.html
@@ -10,44 +10,48 @@
   <link rel="apple-touch-icon" href="/logo192.png" />
   <link rel="manifest" href="/manifest.json" />
   <title>Hung Nguyen</title>
-  <link rel="stylesheet" href="/theme.css">
+  <link rel="stylesheet" href="/style.css">
   <link rel="stylesheet" href="/assets/icons/icomoon/style.css">
 </head>
 
 <body>
+  <header class="container" style="min-height: 20dvh;">
+    <div style="display: flex; justify-content: space-between; padding-top: 50px;">
+      <div style="width: 24px;">
+        <img src="/logo775x960.png" alt="Logo">
+      </div>
+    </div>
 
-  <header class="container">
-    <h1>Hello</h1>
-    <h2 class="color-secondary">My name is Hung, nice to have you here!</h2>
   </header>
 
-  <main class="container">
-    <p>To contact, please go <a href="#footer">here</a>.</p>
-    <p class="mb-large">This is my playground. I sometimes play with CSS on my spare time.</p>
+  <main class="container" style="position: relative; min-height: 60dvh;">
+    <span
+      style="z-index:100; writing-mode: vertical-rl; text-orientation: mixed; position: absolute; top: 50%; right: 0;">hungmqn.com</span>
+    <div class="bg-color-gradient-primary"
+      style="position: absolute; top: 50%; left: 50%; right: 20%; height: 50dvh; z-index: -1; border-radius: 8px; padding: 24px;">
+      <!-- <span style="position: absolute; left: -15%; font-size: 100px; font-style: italic;">Hi!</span> -->
+      <p class="font-size-large">Hi!</p>
 
-    <figure class="parallax mb-large">
-      <img class="parallax-background" src="assets/images/landscape.webp" alt="Landscape" />
-      <figcaption class="parallax-foreground">
-        Really want to live at a place like this. Btw, this is to test
-        parallax
-        effect. This should go down.</figcaption>
-      <figcaption class="parallax-foreground parallax-up" style="margin-top: 200px">And this should go up. Seem like I
-        succeed.</figcaption>
-    </figure>
-    <figure class="mb-large">
-      <img src="assets/images/koi.webp" alt="Koi" />
-      <figcaption>I like kois, they are beautiful, aren't they?</figcaption>
-    </figure>
+      <p class="font-size-medium">Nice to have you here.</p>
+    </div>
+    <div>
+      <span style="font-size: 54px;">Hung Nguyen</span>
+      <br>
+      <span class="color-secondary" style="font-size: 28px;">Software Engineer</span>
+    </div>
   </main>
 
-  <footer class="container text-center" id="footer">
-    <p class="text-center">hungmqn.com</p>
-    <a href="https://github.com/hungmqn" target="_blank" rel="noopener noreferrer"> <span
-        class="icon-github"></span></a>
-    <a href="https://www.linkedin.com/in/hungmqn" target="_blank" rel="noopener noreferrer"> <span
-        class="icon-linkedin2"></span></a>
+  <footer class="container" id="footer" style="min-height: 20dvh;">
+    <div style="display: flex; justify-content: space-between; padding-top: 50px; padding-bottom: 50px;">
+      <p>&#169; Hung Nguyen</p>
+      <p>
+        <a href="https://github.com/hungmqn" target="_blank" rel="noopener noreferrer"> <span
+            class="icon-github"></span></a>
+        <a href="https://www.linkedin.com/in/hungmqn" target="_blank" rel="noopener noreferrer"> <span
+            class="icon-linkedin2"></span></a>
+      </p>
+    </div>
   </footer>
-
 </body>
 
 </html>
