Update logo and clean up redundant code

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <header class="container" style="min-height: 20dvh;">
     <div style="display: flex; justify-content: space-between; padding-top: 50px;">
-      <div style="width: 24px;">
+      <div class="bg-color-gradient-primary" style="width: 30px; padding: 12px; border-radius: 4px;">
         <img src="/logo775x960.png" alt="Logo">
       </div>
     </div>
@@ -29,9 +29,8 @@
       style="z-index:100; writing-mode: vertical-rl; text-orientation: mixed; position: absolute; top: 50%; right: 0;">hungmqn.com</span>
     <div class="bg-color-gradient-primary"
       style="position: absolute; top: 50%; left: 50%; right: 20%; height: 50dvh; z-index: -1; border-radius: 8px; padding: 24px;">
-      <!-- <span style="position: absolute; left: -15%; font-size: 100px; font-style: italic;">Hi!</span> -->
-      <p class="font-size-large">Hi!</p>
 
+      <p class="font-size-large">Hi!</p>
       <p class="font-size-medium">Nice to have you here.</p>
     </div>
     <div>
