Update home page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Website of Hung Nguyen, a software engineer." />
+  <meta name="description" content="Website of Hung Nguyen, a software engineer, enthusiastic photographer." />
   <link rel="icon" href="/favicon.ico" />
   <link rel="apple-touch-icon" href="/logo192.png" />
   <link rel="manifest" href="/manifest.json" />
@@ -15,40 +15,78 @@
 </head>
 
 <body>
-  <header class="container" style="min-height: 20dvh;">
-    <div style="display: flex; justify-content: space-between; padding-top: 50px;">
-      <div class="bg-color-gradient-primary" style="width: 30px; padding: 12px; border-radius: 4px;">
-        <img src="/logo775x960.png" alt="Logo">
+  <header class="container" style="min-height: 10dvh; padding: 20px;">
+    <div class="text-center">
+      <div class="item">
+        <div class="logo font-serif"><a href="/">H</a></div>
       </div>
     </div>
-
+    <!-- <div>
+      <nav class="top-nav">
+        <div class="item">About</div>
+        <div class="item">Photography</div>
+        <div class="item">Blog</div>
+      </nav>
+    </div> -->
   </header>
 
-  <main class="container" style="position: relative; min-height: 60dvh;">
-    <span
-      style="z-index:100; writing-mode: vertical-rl; text-orientation: mixed; position: absolute; top: 50%; right: 0;">hungmqn.com</span>
-    <div class="bg-color-gradient-primary"
-      style="position: absolute; top: 50%; left: 50%; right: 20%; height: 50dvh; z-index: -1; border-radius: 8px; padding: 24px;">
-
-      <p class="font-size-large">Hi!</p>
-      <p class="font-size-medium">Nice to have you here.</p>
-    </div>
-    <div>
-      <span style="font-size: 54px;">Hung Nguyen</span>
-      <br>
-      <span class="color-secondary" style="font-size: 28px;">Software Engineer</span>
+  <main class="bg-color-gradient-primary">
+    <div class="container" style="padding-top: 64px; padding-bottom: 64px;">
+      <div style="max-width: 70%;">
+        <h1 class="font-serif">Hey, I am Hung.</h1>
+        <p>A software engineer with a passion for building innovative software. I'm always eager to learn new things
+          and constantly improving my skills.</p>
+      </div>
+      <div style="max-width: 70%;">
+        <h2 class="font-serif">What do I do here?</h2>
+        <p>
+          I've traded lines of code for frames of life. My passion for photography has
+          evolved into a captivating journey of capturing the world's beauty through a lens.
+        </p>
+        <p>
+          I'm currently working on a new project that will showcase my love for photography.
+        </p>
+        <p>
+          Through this project, I aim to capture the essence of the place I travel, explore new creative techniques, and
+          document the beauty of everyday life. I'm excited to share my progress and final results with you as I develop
+          this exciting endeavor.
+        </p>
+        <p class="font-weight-bold">
+          Stay tuned for updates and sneak peeks!
+        </p>
+      </div>
     </div>
   </main>
 
-  <footer class="container" id="footer" style="min-height: 20dvh;">
-    <div style="display: flex; justify-content: space-between; padding-top: 50px; padding-bottom: 50px;">
-      <p>&#169; Hung Nguyen</p>
-      <p>
-        <a href="https://github.com/hungmqn" target="_blank" rel="noopener noreferrer"> <span
-            class="icon-github"></span></a>
-        <a href="https://www.linkedin.com/in/hungmqn" target="_blank" rel="noopener noreferrer"> <span
-            class="icon-linkedin2"></span></a>
-      </p>
+  <footer class="footer color-secondary" id="footer" style="min-height: 10dvh;">
+    <div class="container">
+      <div class="responsive">
+        <div>
+          <p class="font-weight-bold">Connect with me</p><br />
+          <p>
+            <a href="https://github.com/hungmqn" target="_blank" rel="noopener noreferrer"
+              class="color-secondary font-size-small">
+              github.com/hungmqn</a>
+          </p>
+          <p>
+            <a href="https://www.linkedin.com/in/hungmqn" target="_blank" rel="noopener noreferrer"
+              class="color-secondary font-size-small"> linkedin.com/in/hungmqn</a>
+          </p>
+          <p>
+            <a href="https://www.facebook.com/iamkasuy/" target="_blank" rel="noopener noreferrer"
+              class="color-secondary font-size-small"> facebook.com/iamkasuy</a>
+          </p>
+        </div>
+        <div>
+          <p class="font-weight-bold">Thanks for reading</p>
+        </div>
+      </div>
+      <div class="text-center font-size-small" style="padding: 16px;">
+        <p>
+          &#169; Hung Nguyen
+        </p>
+      </div>
+    </div>
     </div>
   </footer>
 </body>
