Update the whole website

--- a/index.html
+++ b/index.html
@@ -21,48 +21,51 @@
         <div class="logo font-serif"><a href="/">H</a></div>
       </div>
     </div>
-    <!-- <div>
+    <div>
       <nav class="top-nav">
-        <div class="item">About</div>
-        <div class="item">Photography</div>
-        <div class="item">Blog</div>
+        <div class="item"><a href="/about">About</a></div>
+        <div class="item"><a href="/photography">Photography</a></div>
+        <div class="item"><a href="/blog">Blog</a></div>
       </nav>
-    </div> -->
+    </div>
   </header>
 
   <main class="bg-color-gradient-primary">
     <div class="container" style="padding-top: 64px; padding-bottom: 64px;">
-      <div style="max-width: 70%;">
-        <h1 class="font-serif">Hey, I am Hung.</h1>
-        <p>A software engineer with a passion for building innovative software. I'm always eager to learn new things
-          and constantly improving my skills.</p>
-      </div>
-      <div style="max-width: 70%;">
-        <h2 class="font-serif">What do I do here?</h2>
-        <p>
-          I've traded lines of code for frames of life. My passion for photography has
-          evolved into a captivating journey of capturing the world's beauty through a lens.
-        </p>
-        <p>
-          I'm currently working on a new project that will showcase my love for photography.
-        </p>
-        <p>
-          Through this project, I aim to capture the essence of the place I travel, explore new creative techniques, and
-          document the beauty of everyday life. I'm excited to share my progress and final results with you as I develop
-          this exciting endeavor.
-        </p>
-        <p class="font-weight-bold">
-          Stay tuned for updates and sneak peeks!
-        </p>
+      <div style="max-width: 80%; margin: auto;">
+        <div style="margin-bottom: 48px;">
+          <h1 class="font-serif">Hey, I am Hung.</h1>
+          <p>I am a software enginner by office hours and an enthusiastic photographer.</p>
+        </div>
+        <div>
+          <h2 class="font-serif">What do I do here?</h2>
+          <p>
+            My passion for photography has evolved into a captivating journey of capturing the world's beauty through a
+            lens.
+          </p>
+          <p>
+            I'm currently working on a new project that will showcase my love for photography.
+          </p>
+          <p>
+            Through this project, I aim to capture the essence of the place I travel, explore new creative techniques,
+            and
+            document the beauty of everyday life. I'm excited to share my progress and final results with you as I
+            develop
+            this exciting endeavor.
+          </p>
+          <p class="font-weight-bold">
+            Stay tuned for updates and sneak peeks!
+          </p>
+        </div>
       </div>
     </div>
   </main>
 
   <footer class="footer color-secondary" id="footer" style="min-height: 10dvh;">
     <div class="container">
-      <div class="responsive">
-        <div>
-          <p class="font-weight-bold">Connect with me</p><br />
+      <div class="footer-responsive">
+        <div id="connect">
+          <p class="font-weight-bold">Social</p><br />
           <p>
             <a href="https://github.com/hungmqn" target="_blank" rel="noopener noreferrer"
               class="color-secondary font-size-small">
