Add photography page

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
               class="color-secondary font-size-small"> linkedin.com/in/hungmqn</a>
           </p>
           <p>
-            <a href="https://www.facebook.com/iamkasuy/" target="_blank" rel="noopener noreferrer"
-              class="color-secondary font-size-small"> facebook.com/iamkasuy</a>
+            <a href="https://www.facebook.com/hungmqncraft/" target="_blank" rel="noopener noreferrer"
+              class="color-secondary font-size-small"> facebook.com/hungmqncraft</a>
           </p>
         </div>
         <div>
