--- a/photography.html
+++ b/photography.html
@@ -30,16 +30,57 @@
     </div>
   </header>
 
-  <main class="bg-color-gradient-primary">
+  <main class="bg-color-gradient-secondary">
     <div class="container" style="padding-top: 64px; padding-bottom: 64px;">
-      <div class="under-construction">
-        <h1 class="font-serif">Under construction</h1>
-        <p class="font-weight-bold">
-          Stay tuned for updates and sneak peeks!
-        </p>
-        <p>
-          or connect with me <a href="#footer" class="font-weight-bold">here</a>
-        </p>
+      <div class="album-list">
+        <div class="album-item">
+          <img class="album-item-thumb" src="/assets/images/photography/bali-1.png" alt="Gallery Name">
+          <div class="album-item-name">
+            Gallery Name
+          </div>
+        </div>
+        <div class="album-item"> <img class="album-item-thumb" src="/assets/images/photography/bali-2.png"
+            alt="Gallery Name">
+          <div class="album-item-name">
+            Gallery Name
+          </div>
+        </div>
+        <div class="album-item"> <img class="album-item-thumb" src="/assets/images/photography/bali-3.png"
+            alt="Gallery Name">
+          <div class="album-item-name">
+            Gallery Name
+          </div>
+        </div>
+        <div class="album-item">
+          <img class="album-item-thumb" src="/assets/images/photography/bali-1.png" alt="Gallery Name">
+          <div class="album-item-name">
+            Gallery Name
+          </div>
+        </div>
+        <div class="album-item"> <img class="album-item-thumb" src="/assets/images/photography/bali-2.png"
+            alt="Gallery Name">
+          <div class="album-item-name">
+            Gallery Name
+          </div>
+        </div>
+        <div class="album-item"> <img class="album-item-thumb" src="/assets/images/photography/bali-3.png"
+            alt="Gallery Name">
+          <div class="album-item-name">
+            Gallery Name
+          </div>
+        </div>
+        <div class="album-item"> <img class="album-item-thumb" src="/assets/images/photography/bali-2.png"
+            alt="Gallery Name">
+          <div class="album-item-name">
+            Gallery Name
+          </div>
+        </div>
+        <div class="album-item"> <img class="album-item-thumb" src="/assets/images/photography/bali-2.png"
+            alt="Gallery Name">
+          <div class="album-item-name">
+            Gallery Name
+          </div>
+        </div>
       </div>
     </div>
     </div>
@@ -60,8 +101,8 @@
               class="color-secondary font-size-small"> linkedin.com/in/hungmqn</a>
           </p>
           <p>
-            <a href="https://www.facebook.com/iamkasuy/" target="_blank" rel="noopener noreferrer"
-              class="color-secondary font-size-small"> facebook.com/iamkasuy</a>
+            <a href="https://www.facebook.com/hungmqncraft/" target="_blank" rel="noopener noreferrer"
+              class="color-secondary font-size-small"> facebook.com/hungmqncraft</a>
           </p>
         </div>
         <div>
