Chore: update gallery

--- a/photography/bali.html
+++ b/photography/bali.html
@@ -32,59 +32,17 @@
 
   <main class="bg-color-gradient-secondary">
     <div class="container" style="padding-top: 64px; padding-bottom: 64px;">
-      <div class="album-list">
-        <div class="album-item">
-          <a href="/photography/bali">
-            <img class="album-item-thumb" src="/assets/images/photography/bali-1.png" alt="Gallery Name">
-          </a>
-          <div class="album-item-name">
-            <a href="/photography/bali">
-              Bali
-            </a>
-          </div>
-        </div>
-        <!-- <div class="album-item"> <img class="album-item-thumb" src="/assets/images/photography/bali-2.png"
-            alt="Gallery Name">
-          <div class="album-item-name">
-            Gallery Name
-          </div>
-        </div>
-        <div class="album-item"> <img class="album-item-thumb" src="/assets/images/photography/bali-3.png"
-            alt="Gallery Name">
-          <div class="album-item-name">
-            Gallery Name
-          </div>
-        </div>
-        <div class="album-item">
-          <img class="album-item-thumb" src="/assets/images/photography/bali-1.png" alt="Gallery Name">
-          <div class="album-item-name">
-            Gallery Name
-          </div>
-        </div>
-        <div class="album-item"> <img class="album-item-thumb" src="/assets/images/photography/bali-2.png"
-            alt="Gallery Name">
-          <div class="album-item-name">
-            Gallery Name
-          </div>
-        </div>
-        <div class="album-item"> <img class="album-item-thumb" src="/assets/images/photography/bali-3.png"
-            alt="Gallery Name">
-          <div class="album-item-name">
-            Gallery Name
-          </div>
-        </div>
-        <div class="album-item"> <img class="album-item-thumb" src="/assets/images/photography/bali-2.png"
-            alt="Gallery Name">
-          <div class="album-item-name">
-            Gallery Name
-          </div>
-        </div>
-        <div class="album-item"> <img class="album-item-thumb" src="/assets/images/photography/bali-2.png"
-            alt="Gallery Name">
-          <div class="album-item-name">
-            Gallery Name
-          </div>
-        </div> -->
+      <div class="gallery">
+        <img class="gallery-item " src="/assets/images/photography/bali-1.png" alt="Gallery Name">
+        <img class="gallery-item" src="/assets/images/photography/bali-2.png" alt="Gallery Name">
+        <img class="gallery-item wide-image" src="/assets/images/photography/bali-3.png" alt="Gallery Name">
+        <img class="gallery-item four-grid-cells" src="/assets/images/photography/bali-1.png" alt="Gallery Name">
+        <img class="gallery-item wide-image" src="/assets/images/photography/bali-2.png" alt="Gallery Name">
+        <img class="gallery-item" src="/assets/images/photography/bali-3.png" alt="Gallery Name">
+        <img class="gallery-item" src="/assets/images/photography/bali-1.png" alt="Gallery Name">
+        <img class="gallery-item wide-image" src="/assets/images/photography/bali-2.png" alt="Gallery Name">
+        <img class="gallery-item wide-image" src="/assets/images/photography/bali-3.png" alt="Gallery Name">
+        <img class="gallery-item" src="/assets/images/photography/bali-1.png" alt="Gallery Name">
       </div>
     </div>
     </div>
