--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <div>
           <h2 class="font-serif">What do I do here?</h2>
           <p>
-            My passion for photography has evolved into a captivating journey of capturing the world's beauty through a
-            lens.
+            My passion for photography has evolved into a captivating journey of capturing the world's beauty through
+            lenses.
           </p>
           <p>
             I'm currently working on a new project that will showcase my love for photography.
